--- a/QuotesGenerator/Base.lproj/Main.storyboard
+++ b/QuotesGenerator/Base.lproj/Main.storyboard
@@ -1,24 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="QuotesGenerator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="명언 생성기" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gw7-dx-9aP">
+                                <rect key="frame" x="24" y="83" width="345" height="57"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vwi-zV-WI4">
+                                <rect key="frame" x="24" y="164" width="345" height="200"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vmy-d2-1cj">
+                                        <rect key="frame" x="20" y="20" width="305" height="119"/>
+                                        <string key="text">LabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabel</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QET-NO-aTV">
+                                        <rect key="frame" x="20" y="159" width="305" height="21"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="QAI-6H-se0"/>
+                                    <constraint firstItem="Vmy-d2-1cj" firstAttribute="leading" secondItem="vwi-zV-WI4" secondAttribute="leading" constant="20" id="SSe-nx-oVQ"/>
+                                    <constraint firstItem="Vmy-d2-1cj" firstAttribute="top" secondItem="vwi-zV-WI4" secondAttribute="top" constant="20" id="T5N-gf-G6r"/>
+                                    <constraint firstItem="QET-NO-aTV" firstAttribute="leading" secondItem="vwi-zV-WI4" secondAttribute="leading" constant="20" id="Yff-Nu-OV8"/>
+                                    <constraint firstAttribute="bottom" secondItem="QET-NO-aTV" secondAttribute="bottom" constant="20" id="o1d-fD-EA6"/>
+                                    <constraint firstItem="QET-NO-aTV" firstAttribute="top" secondItem="Vmy-d2-1cj" secondAttribute="bottom" constant="20" id="rA4-rt-tCu"/>
+                                    <constraint firstAttribute="trailing" secondItem="QET-NO-aTV" secondAttribute="trailing" constant="20" id="y80-4G-Son"/>
+                                    <constraint firstAttribute="trailing" secondItem="Vmy-d2-1cj" secondAttribute="trailing" constant="20" id="z00-LJ-FBT"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qNg-Rs-elb">
+                                <rect key="frame" x="153" y="384" width="87.333333333333314" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="명언 생성"/>
+                                <connections>
+                                    <action selector="tabQuoteGenderatorButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QJt-4R-Kjl"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Gw7-dx-9aP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="2P0-a4-Mvd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vwi-zV-WI4" secondAttribute="trailing" constant="24" id="FD3-5g-lyh"/>
+                            <constraint firstItem="qNg-Rs-elb" firstAttribute="centerX" secondItem="vwi-zV-WI4" secondAttribute="centerX" id="KYy-eP-RXc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Gw7-dx-9aP" secondAttribute="trailing" constant="24" id="MrY-3o-jSZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Gw7-dx-9aP" secondAttribute="bottom" constant="678" id="Rup-Dv-IPg"/>
+                            <constraint firstItem="Gw7-dx-9aP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="24" id="W1I-oh-vT5"/>
+                            <constraint firstItem="vwi-zV-WI4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="WiR-Nu-tO6"/>
+                            <constraint firstItem="vwi-zV-WI4" firstAttribute="top" secondItem="Gw7-dx-9aP" secondAttribute="bottom" constant="24" id="oXI-Tl-3V9"/>
+                            <constraint firstItem="qNg-Rs-elb" firstAttribute="top" secondItem="vwi-zV-WI4" secondAttribute="bottom" constant="20" id="oYd-W7-reh"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="nameLabel" destination="QET-NO-aTV" id="WmM-VG-fie"/>
+                        <outlet property="quoteLabel" destination="Vmy-d2-1cj" id="6sk-0Z-hwQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="95" y="4"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
